k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: production
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: python-app
        # CHANGE THIS LINE TO YOUR DOCKERHUB PATH:
        image: chaithu2316/senior-devops-lab:latest 
        # This tells K8s: "Always check the cloud for a new version"
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: production
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: my-app
